<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterCreateProfileActivity">

    <LinearLayout
        android:layout_width="414dp"
        android:layout_height="119dp"
        android:background="@color/secondary"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/bookclubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:paddingStart="30dp"
            android:paddingTop="32dp"
            android:text="Bookclub"
            android:textColor="@color/primary"
            android:textSize="28dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="412dp"
        android:layout_height="813dp"
        android:background="@drawable/white_background_auth"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="473dp"
            android:background="@drawable/white_backrground">

            <TextView
                android:id="@+id/profileTitle"
                android:layout_width="381dp"
                android:layout_height="90dp"
                android:fontFamily="@font/poppins_semibold"
                android:paddingStart="30dp"
                android:paddingTop="28dp"
                android:text="Profile"
                android:textColor="@color/primary"
                android:textSize="43dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/titleDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:paddingStart="30dp"
                android:paddingTop="18dp"
                android:text="register with your contact"
                android:textColor="@color/primary"
                android:textSize="18dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileTitle" />


            <EditText
                android:id="@+id/inputFirstName"
                android:layout_width="168dp"
                android:layout_height="48dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="28dp"
                android:ems="10"
                android:hint="@string/frist_name"
                android:inputType="phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleDescription" />

            <EditText
                android:id="@+id/inputSecondName"
                android:layout_width="173dp"
                android:layout_height="48dp"
                android:layout_marginStart="7dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:hint="@string/second_name"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/inputFirstName"
                app:layout_constraintTop_toBottomOf="@+id/titleDescription" />

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="343dp"
                android:layout_height="48dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/enter_your_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputSecondName" />

            <EditText
                android:id="@+id/inputUsername"
                android:layout_width="343dp"
                android:layout_height="48dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/enter_your_username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputEmail" />
            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="343dp"
                android:layout_height="48dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/enter_your_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputUsername" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/backgroundimage"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnCreateProfile"
                    android:layout_width="150dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="120dp"
                    android:text="@string/create_profile" />

            </LinearLayout>
        </FrameLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>